<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".detalles.AddDetalleChincheSalivosa">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idFormularioNuevo"
        android:text="Formulario"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/idFormularioNuevo"
        android:id="@+id/wrapperEstacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/abc_estiva"
            android:inputType="number"
            android:id="@+id/txtChincheSalivosa_estacion" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/wrapperEstacion"
        android:id="@+id/wrapperVivos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/abc_vivos"
            android:inputType="number"
            android:id="@+id/txtChincheSalivosa_vivos" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapperNinfa1"
        android:layout_below="@+id/wrapperVivos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/abc_ninfa1"
            android:inputType="number"
            android:id="@+id/txtChincheSalivosa_ninfa1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapperNinfa2"
        android:layout_below="@+id/wrapperNinfa1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/abc_ninfa2"
            android:inputType="number"
            android:id="@+id/txtChincheSalivosa_ninfa2" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/wrapperTallos"
        android:layout_below="@+id/wrapperNinfa2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/abc_tallos"
            android:inputType="number"
            android:id="@+id/txtChincheSalivosa_tallos" />
    </android.support.design.widget.TextInputLayout>
</RelativeLayout>
